Correction de z-index des modals

--- a/sass/components/_contactForm.scss
+++ b/sass/components/_contactForm.scss
@@ -8,6 +8,7 @@
     inset: 0;
     font-size: 1.5rem;
     overflow-y: auto;
+    z-index: 100;
 
     &.open{
         display: block;
