--- a/sass/components/_lightbox.scss
+++ b/sass/components/_lightbox.scss
@@ -9,6 +9,7 @@
     justify-content: center;
     align-items: center;
     background-color: $white;
+    z-index: 100;
 
     &.open{
         display: flex;
